force-app/main/default/objects/Claimant_Information__c/Claimant_Information__c.object-meta.xml
<CustomObject>
    <label>Claimant Information</label>
    <nameField>
        <displayFormat>Claimant - {000000}</displayFormat>
        <label>Claimant Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claimant Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>