force-app/main/default/objects/Claimant_Information__c/fields/Claimant_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Date_of_Birth__c</fullName>
    <label>Claimant Date of Birth</label>
    <type>Date</type>
</CustomField>