force-app/main/default/objects/Claimant_Information__c/fields/Claimant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Last_Name__c</fullName>
    <label>Claimant Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>