force-app/main/default/objects/Claimant_Information__c/fields/Claimant_Vehicle_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Vehicle_Registration_Number__c</fullName>
    <label>Claimant Vehicle Registration Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>