force-app/main/default/objects/Claimant_Information__c/fields/Editable__c.field-meta.xml
<CustomField>
    <fullName>Editable__c</fullName>
    <formula>if(text(Case__r.Status)=&apos;Created&apos;,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>