force-app/main/default/objects/Claimant_Information__c/fields/Reg_Entered__c.field-meta.xml
<CustomField>
    <fullName>Reg_Entered__c</fullName>
    <formula>IF(Claimant_Vehicle_Registration_Number__c != Null,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg Entered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>