force-app/main/default/objects/Claimant_Information__c/recordTypes/Claimant_PI_PL_EE.recordType-meta.xml
<RecordType>
    <fullName>Claimant_PI_PL_EE</fullName>
    <active>true</active>
    <label>Claimant - PI-PL-EE</label>
</RecordType>