force-app/main/default/objects/Claimant_Information__c/validationRules/Claimant_DOB_cannot_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Claimant_DOB_cannot_be_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>Claimant_Date_of_Birth__c   &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Claimant_Date_of_Birth__c</errorDisplayField>
    <errorMessage>The claimant&apos;s date of birth cannot be in the future.</errorMessage>
</ValidationRule>